--- a/SGCorpHR.UI/Views/Shared/_Layout.cshtml
+++ b/SGCorpHR.UI/Views/Shared/_Layout.cshtml
@@ -37,6 +37,14 @@
 
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Time Tracker <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/TimeTracker/SelectEmpToView">View Timesheet</a></li>
+                            <li><a href="/TimeTracker/UploadPolicyDoc">Submit Time</a></li>
+
+                        </ul>
+                    </li>
                 </ul>
                
             </div>
@@ -68,7 +76,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - SGCorp Resumes</p>
+            <p>&copy; @DateTime.Now.Year - SGCorp HR Portal</p>
         </footer>
     </div>
 
