--- a/SGCorpHR.UI/Views/Shared/_Layout.cshtml
+++ b/SGCorpHR.UI/Views/Shared/_Layout.cshtml
@@ -7,10 +7,10 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
-    
+
     <nav class="navbar navbar-default">
         <div class="container-fluid">
-          
+
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
@@ -18,7 +18,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="/Resumes/Save">Upload Resume</a></li>
                             <li><a href="/Resumes/ViewResume">View Resumes</a></li>
-                          
+
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -41,12 +41,12 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Time Tracker <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/TimeTracker/SelectEmpToView">View Timesheet</a></li>
-                            <li><a href="/TimeTracker/UploadPolicyDoc">Submit Time</a></li>
+                            <li><a href="/TimeTracker/SubmitTimeSheet">Submit Time</a></li>
 
                         </ul>
                     </li>
                 </ul>
-               
+
             </div>
         </div>
     </nav>
@@ -60,14 +60,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-              <a href="/Index">  <img src="/Image/swg_logo-white.png" style="
+                <a href="/Index">
+                    <img src="/Image/swg_logo-white.png" style="
     width: 200px;
-"></a>
+">
+                </a>
                 @*@Html.ActionLink("SGCorp Resumes", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+                <ul class="nav navbar-nav"></ul>
             </div>
         </div>
     </div>
