Edit functionality complete

--- a/SGCorpHR.UI/Views/TimeTracker/ViewPtoRequests.cshtml
+++ b/SGCorpHR.UI/Views/TimeTracker/ViewPtoRequests.cshtml
@@ -38,7 +38,7 @@
                     <td>@pto.EmpID</td>
                     <td>@pto.Date.ToString("d")</td>
                     <td>@pto.HoursRequested</td>
-                    <td>@pto.Status</td>
+                    <td>@pto.PtoStatus</td>
                     <td>@pto.ReasonRejected</td>
                     <td>@pto.ManagerID</td>
                     
