--- a/SGCorpHR.UI/Views/TimeTracker/EditPtoRequest.cshtml
+++ b/SGCorpHR.UI/Views/TimeTracker/EditPtoRequest.cshtml
@@ -1,4 +1,4 @@
-﻿@model SGCorpHR.UI.Models.PaidTimeOffVM
+﻿@model SGCorpHR.UI.Models.PtoEditVM
 
 @{
     ViewBag.Title = "EditPtoRequest";
@@ -7,48 +7,77 @@
 <h2>Edit Pto Request</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("SubmitEditedRequest", "TimeTracker", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(m=>m.PtoRequestToEdit.PtoRequestID, Model.PtoRequestToEdit.PtoRequestID)
         <div class="form-group">
-            @Html.LabelFor(model => model.EmpId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PtoRequestToEdit.EmpID, "Employee ID", htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EmpId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EmpId, "", new { @class = "text-danger" })
+                @Html.DisplayTextFor(m=>m.PtoRequestToEdit.EmpID)
+                @Html.HiddenFor(m => m.PtoRequestToEdit.EmpID, Model.PtoRequestToEdit.EmpID)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.FullName, "Employee Name",htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DisplayTextFor(model => model.FullName)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ManagerId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PtoRequestToEdit.ManagerID, "Approver",  htmlAttributes:  new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ManagerId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ManagerId, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(m=>m.PtoRequestToEdit.ManagerID, Model.Managers,  new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.PtoRequestToEdit.ManagerID, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HoursRequested, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PtoRequestToEdit.HoursRequested, "Hours Requested",  htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HoursRequested, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HoursRequested, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(m => m.PtoRequestToEdit.HoursRequested, new[]
+                {
+                    new SelectListItem {Text = "4", Value = "4"},
+                    new SelectListItem {Text = "8", Value = "8"},
+                }, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.PtoRequestToEdit.HoursRequested, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PtoRequestToEdit.Date, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.PtoRequestToEdit.Date, new { htmlAttributes = new { @class = "form-control" }})
+                @Html.ValidationMessageFor(model => model.PtoRequestToEdit.Date, "", new {@class = "text-danger"})
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.PtoRequestToEdit.PtoStatus, "Approval Status",htmlAttributes: new {@class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.DropDownListFor(m=>m.PtoRequestToEdit.PtoStatus, new[]
+                {
+                    new SelectListItem {Text = "Approved", Value = "Approved"},
+                    new SelectListItem {Text = "Rejected", Value = "Rejected"},
+                }, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.PtoRequestToEdit.PtoStatus, "", new {@class = "text-danger"})
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.PtoRequestToEdit.ReasonRejected, "Reason Rejected",htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.PtoRequestToEdit.ReasonRejected, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PtoRequestToEdit.ReasonRejected, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Submit Edits" class="btn btn-default" />
             </div>
         </div>
     </div>
