--- a/SGCorpHR.UI/Views/TimeTracker/SubmitPtoRequest.cshtml
+++ b/SGCorpHR.UI/Views/TimeTracker/SubmitPtoRequest.cshtml
@@ -16,23 +16,19 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EmpId, "Employee", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(m => m.EmpId, (IEnumerable<SelectListItem>)ViewBag.EmployeeList, "Select Employee", new {htmlAttributes = new {@class = "form-control"}})
+                @Html.DropDownListFor(m => m.EmpId, (IEnumerable<SelectListItem>)ViewBag.EmployeeList, "Select Employee", htmlAttributes: new {@class = "form-control"})
                 @Html.ValidationMessageFor(model => model.EmpId, "", new {@class = "text-danger"})
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ManagerId, "Manager ID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ManagerId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ManagerId, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.HoursRequested,"Hours Requested", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HoursRequested, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(m => m.HoursRequested, new[]
+                {
+                    new SelectListItem {Text = "4", Value = "4"},
+                    new SelectListItem {Text = "8", Value = "8"},
+                }, "Select hours requested", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.HoursRequested, "", new { @class = "text-danger" })
             </div>
         </div>
