View all ptos and ts for emp

--- a/SGCorpHR.UI/Views/Suggestions/AddSuggestion.cshtml
+++ b/SGCorpHR.UI/Views/Suggestions/AddSuggestion.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>AddSuggestion</h2>
+<h3>Add a suggestion</h3>
 
 <div>
     @using (Html.BeginForm("AddSuggestionForm", "Suggestions", FormMethod.Post))
