--- a/SGCorpHR.UI/Views/Shared/_Layout.cshtml
+++ b/SGCorpHR.UI/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Employee Directory<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/EmployeeDirectory/EmployeeDirectory">View Employee Directory</a></li>
+                            <li><a href="/Employee">View Employee Directory</a></li>
                         </ul>
                     </li>
                 </ul>
