--- a/SGCorpHR.UI/Views/Employee/Index.cshtml
+++ b/SGCorpHR.UI/Views/Employee/Index.cshtml
@@ -1,50 +1,50 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+	ViewBag.Title = "Index";
 }
 
 <h2>Employee Directory</h2>
 
 <div class="row">
-    <table id="employees" class="table">
-        <thead>
-            <tr>
-                <th>Last Name</th>
-                <th>First Name</th>
-                <th>Hire Date</th>
-                <th>Manager Name</th>
-                <th>Department Name</th>
-                <th>Location Name</th>
-                <th>Status</th>
+	<table id="employees" class="table">
+		<thead>
+			<tr>
+				<th>Last Name</th>
+				<th>First Name</th>
+				<th>Hire Date</th>
+				<th>Manager Name</th>
+				<th>Department Name</th>
+				<th>Location Name</th>
+				<th>Status</th>
 
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+			</tr>
+		</thead>
+		<tbody></tbody>
+	</table>
 
 </div>
 
 @section Scripts {
-    <script>
-        var uri = '/api/EmployeeDirectory';
+	<script>
+		var uri = '/api/EmployeeDirectory/';
 
-        $(document).ready(function() {
-            loadEmployees();
-        });
+		$(document).ready(function() {
+			loadEmployees();
+		});
 
-        function loadEmployees() {
-            $.getJSON(uri)
-                .done(function(data) {
-                    $('#employees tbody tr').remove();
+		function loadEmployees() {
+			$.getJSON(uri)
+				.done(function(data) {
+					$('#employees tbody tr').remove();
 
-                    $.each(data, function(index, employee) {
-                        $(createRow(employee)).appendTo($('#employees tbody'));
-                    });
-                });
-        }
+					$.each(data, function(index, employee) {
+						$(createRow(employee)).appendTo($('#employees tbody'));
+					});
+				});
+		}
 
-        function createRow(employee) {
-            return '<tr><td>' + employee.LastName + '</td> <td>' + employee.FirstName + '</td> <td>' + employee.FormattedHireDate + '</td> <td>' + employee.ManagerName + '</td> <td>' + employee.DepartmentName + '</td> <td>' + employee.State + '</td> <td>' + employee.Status + '</td> </tr>';
-        }
-    </script>
+		function createRow(employee) {
+			return '<tr data-departmentID=' + employee.Department.DepartmentID+'><td>' + employee.LastName + '</td> <td>' + employee.FirstName + '</td> <td>' + employee.FormattedHireDate + '</td> <td>' + employee.ManagerName + '</td> <td>' + employee.Department.DepartmentName + '</td> <td>' + employee.State + '</td> <td>' + employee.Status + '</td> </tr>';
+		}
+	</script>
 }
