--- a/SGCorpHR.UI/Views/EmployeeDirectory/EmployeeDirectory.cshtml
+++ b/SGCorpHR.UI/Views/EmployeeDirectory/EmployeeDirectory.cshtml
@@ -28,7 +28,7 @@
 
 @section Scripts {
     <script>
-        var uri = '/api/EmployeeDirectory';
+        var uri = '/api/EmployeeDirectory/';
 
         $(document).ready(function() {
             loadEmployees();
