Fully functional lookup

--- a/SGCorpHR.UI/Views/Employee/Index.cshtml
+++ b/SGCorpHR.UI/Views/Employee/Index.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h2>Employee Directory</h2>
+<a href="/Employee/LookUp">Search By Department</a>
 
 <div class="row">
 	<table id="employees" class="table">
