--- a/SGCorpHR.UI/Views/EmployeeDirectory/EmployeeDirectory.cshtml
+++ b/SGCorpHR.UI/Views/EmployeeDirectory/EmployeeDirectory.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h2>Employee Directory</h2>
+<button type="button" class="btn btn-primary btn-lg" href="/employee/lookup.com">Search By Department</button>
 
 <div class="row">
     <table id="employees" class="table">
