--- a/SGCorpHR.UI/Views/Employee/LookUp.cshtml
+++ b/SGCorpHR.UI/Views/Employee/LookUp.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-xs-6">
         <h2>Search by Department</h2>
-        <a href="/Employee/">View All Employees</a>
+        <a href="/Employee/" class="btn btn-sm">View All Employees</a>
         <div class="form-group">
             <label>Department</label>
             <input type="text" id="departmentID" class="form-control" />
