department CRUD working, views in progress

--- a/SGCorpHR.UI/Views/Shared/_Layout.cshtml
+++ b/SGCorpHR.UI/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Employee Directory<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/Employee">View Employee Directory</a></li>
+                            <li><a href="/Employee/ManageDepartments">Manage Departments</a></li>
                         </ul>
                     </li>
                 </ul>
