--- a/SGCorpHR.UI/Views/Employee/Index.cshtml
+++ b/SGCorpHR.UI/Views/Employee/Index.cshtml
@@ -1,51 +1,77 @@
 ﻿
 @{
-	ViewBag.Title = "Index";
+    ViewBag.Title = "Employee Directory";
 }
 
 <h2>Employee Directory</h2>
-<a href="/Employee/LookUp" class="btn btn-sm">Search By Department</a>
+<div class="row">
+<div class="col-xs-6">
+    <h4>Search by Department</h4>
+    <div class="form-group">
+        <input type="text" id="departmentID" class="form-control" />
+    </div>
+    <button class="btn btn-primary" onclick="find()">Search</button>
+</div>
+</div>
 
 <div class="row">
-	<table id="employees" class="table">
-		<thead>
-			<tr>
-				<th>Last Name</th>
-				<th>First Name</th>
-				<th>Hire Date</th>
-				<th>Manager Name</th>
-				<th>Department Name</th>
-				<th>Location Name</th>
-				<th>Status</th>
+    <table id="employees" class="table">
+        <thead>
+            <tr>
+                <th>Last Name</th>
+                <th>First Name</th>
+                <th>Hire Date</th>
+                <th>Manager Name</th>
+                <th>Department Name</th>
+                <th>Location Name</th>
+                <th>Status</th>
 
-			</tr>
-		</thead>
-		<tbody></tbody>
-	</table>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
 </div>
 
 @section Scripts {
-	<script>
-		var uri = '/api/EmployeeDirectory/';
+    <script>
+        var uri = '/api/EmployeeDirectory/';
 
-		$(document).ready(function() {
-			loadEmployees();
-		});
+        $(document).ready(function() {
+            loadEmployees();
+        });
 
-		function loadEmployees() {
-			$.getJSON(uri)
-				.done(function(data) {
-					$('#employees tbody tr').remove();
+        function loadEmployees() {
+            $.getJSON(uri)
+                .done(function(data) {
+                    $('#employees tbody tr').remove();
 
-					$.each(data, function(index, employee) {
-						$(createRow(employee)).appendTo($('#employees tbody'));
-					});
-				});
-		}
+                    $.each(data, function(index, employee) {
+                        $(createRow(employee)).appendTo($('#employees tbody'));
+                    });
+                });
+        }
 
-		function createRow(employee) {
-			return '<tr data-departmentID=' + employee.Department.DepartmentID+'><td>' + employee.LastName + '</td> <td>' + employee.FirstName + '</td> <td>' + employee.FormattedHireDate + '</td> <td>' + employee.ManagerName + '</td> <td>' + employee.Department.DepartmentName + '</td> <td>' + employee.State + '</td> <td>' + employee.Status + '</td> </tr>';
-		}
-	</script>
+        function createRow(employee) {
+            return '<tr data-departmentID=' + employee.Department.DepartmentID+'><td>' + employee.LastName + '</td> <td>' + employee.FirstName + '</td> <td>' + employee.FormattedHireDate + '</td> <td>' + employee.ManagerName + '</td> <td>' + employee.Department.DepartmentName + '</td> <td>' + employee.State + '</td> <td>' + employee.Status + '</td> </tr>';
+        }
+
+        function find() {
+            var id = $('#departmentID').val();
+
+            $.getJSON(uri + id)
+                .done(function (data) {
+                    $('#employees tbody tr').remove();
+
+                    $.each(data, function (index, employee) {
+                        $(createRow(employee)).appendTo($('#employees tbody'));
+                    });
+                })
+
+        .fail(function (jqXhr, status, err) {
+            $('#dptEmp').text('Error: ' + err);
+        });
+        }
+
+    </script>
 }
