--- a/SGCorpHR.UI/Views/DepartmentManagement/Index.cshtml
+++ b/SGCorpHR.UI/Views/DepartmentManagement/Index.cshtml
@@ -28,7 +28,9 @@
 </div>
 
 
+
 @section scripts {
+<script src="~/Scripts/app/loadAllDpts.js"></script>
 <script src="~/Scripts/app/deleteDepartment.js"></script>
 <script src="~/Scripts/app/createDepartment.js"></script>
 <script src="~/Scripts/app/updateDepartment.js"></script>
