Added filter view that uses Angular

--- a/SGCorpHR.UI/Views/Shared/_Layout.cshtml
+++ b/SGCorpHR.UI/Views/Shared/_Layout.cshtml
@@ -53,6 +53,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Employees<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/Employee">View Employee Directory</a></li>
+                            <li><a href="/Employee/Filter">Search for Employee(s)</a></li>
                             <li><a href="/ManageEmployees">Manage Employees</a></li>
                         </ul>
                     </li>
