--- a/SGCorpHR.UI/Views/Employee/Index.cshtml
+++ b/SGCorpHR.UI/Views/Employee/Index.cshtml
@@ -3,32 +3,36 @@
     ViewBag.Title = "Employee Directory";
 }
 
-<h2>Employee Directory</h2>
-<div class="row">
-<div class="col-xs-6">
-    <h4>Search by Department</h4>
-    <div class="form-group">
-        <input type="text" id="departmentID" class="form-control" />
-    </div>
-    <button class="btn btn-primary" onclick="find()">Search</button>
-</div>
-</div>
 
+<h2>Employee Directory</h2>
+<h5><a href="/Employee/Filter">Filter employees</a></h5>
 <div class="row">
+    <div class="col-xs-6">
+        <h4>Search by Department ID</h4>
+        <div class="form-group">
+            <input type="text" id="departmentID" class="form-group"/>
+
+            <button class="btn-primary btn-small" onclick="find()">Search</button>
+        </div>
+    </div>
+</div>
+<div class="row">
+
     <table id="employees" class="table">
         <thead>
-            <tr>
-                <th>Last Name</th>
-                <th>First Name</th>
-                <th>Hire Date</th>
-                <th>Manager Name</th>
-                <th>Department Name</th>
-                <th>Location Name</th>
-                <th>Status</th>
+        <tr>
+            <th>Last Name</th>
+            <th>First Name</th>
+            <th>Hire Date</th>
+            <th>Manager Name</th>
+            <th>Department Name</th>
+            <th>Location Name</th>
+            <th>Status</th>
 
-            </tr>
+        </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+        </tbody>
     </table>
 
 </div>
