--- a/SGCorpHR.UI/Views/ManageEmployees/_EditEmployee.cshtml
+++ b/SGCorpHR.UI/Views/ManageEmployees/_EditEmployee.cshtml
@@ -31,7 +31,12 @@
                         </div>
                         <div class="form-group">
                             <label>Department ID</label>
-                            <input type="text" id="updatedDepartmentID" class="form-control" />
+                            <input type="text" id="updatedDepartmentID" class="form-control"/>
+                        </div>
+                        <div>
+                            <label>Hire Date</label>
+                            <input type="text" id="formattedhiredate" class="form-control" readonly />
+                            <p hidden id="hiredate"/>
                         </div>
                     </div>
                 </div>
